--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+* {
+  font-family: Poppins, sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #05224d;
+  color: white;
+}
