--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #05224d;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(3, 67, 112, 1) 0%,
+    rgba(28, 115, 175, 1) 67%,
+    rgba(47, 115, 131, 1) 100%
+  );
+
   color: white;
 }
