--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
   --destructive-foreground: hsl(0 0% 98%);
   --border: hsl(0 0% 89.8%);
   --input: hsl(0 0% 89.8%);
-  --ring: hsl(0 0% 3.9%);
+  --ring: hsl(204, 72%, 40%);
   --chart-1: hsl(12 76% 61%);
   --chart-2: hsl(173 58% 39%);
   --chart-3: hsl(197 37% 24%);
@@ -50,6 +50,18 @@ body {
   --chart-5: hsl(27 87% 67%);
   --radius: 0.6rem;
   --warning-foreground: hsl(38, 100%, 63%);
+
+
+  --animate-slide-in: slide-in 1s ease-in-out;
+
+  @keyframes slide-in {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
 }
 
 
